--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ html, body {
 
 #container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 100vh;
 }
@@ -33,4 +33,25 @@ iframe#screen {
     position: relative;
     top: 80px;
     left: 22px;
+}
+
+section#social-networks {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+section#social-networks img {
+    transition: all 0.2s ease-in-out;
+    filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.6));
+}
+
+section#social-networks img:hover {
+    transform: translate(-5px, -5px);
+    filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.8));
+}
+
+section#social-networks img {
+    border-radius: 50%;
+    width: 4rem;
 }
