added more pages

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ html, body {
 
 #container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     height: 100vh;
 }
@@ -32,12 +32,13 @@ iframe#screen {
     height: 471px;
     position: relative;
     top: 80px;
-    left: 22px;
+    left: 21px;
 }
 
 section#social-networks {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 1rem;
 }
 
