--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,7 @@ section#social-networks img {
         flex-flow: row wrap;
         gap: 0.5rem;
         position: absolute;
-        bottom: 5%;
+        bottom: 0;
         left: 5%;
         right: 5%;
         background-color: #fffa;
