--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,18 @@
 
 html, body {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background: url('../imagens/fundo-madeira.jpg') no-repeat center/cover fixed;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #container {
     display: flex;
-    justify-content: space-evenly;
 }
 
 section#phone  {
@@ -27,9 +32,9 @@ section#phone  {
 
 iframe#screen {
     width: 260px;
-    height: 469px;
+    height: 456px;
     position: relative;
-    top: 60px;
+    top: 74px;
     left: 20px;
 }
 
@@ -38,6 +43,7 @@ section#social-networks {
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
+    padding-left: 5rem;
 }
 
 section#social-networks img {
@@ -55,7 +61,7 @@ section#social-networks img {
     width: 4rem;
 }
 
-@media screen and (max-width: 468px) {
+@media screen and (max-width: 496px) {
     #container {
         display: block;
         margin: auto;
