--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 html, body {
     width: 100vw;
     min-height: 100vh;
-    background: url('../imagens/fundo-madeira.jpg') no-repeat center/cover fixed;
+    background: url('../imagens/fundo.jpg') no-repeat center/cover fixed;
 }
 
 body {
@@ -53,7 +53,7 @@ section#social-networks img {
 
 section#social-networks img:hover {
     transform: translate(-5px, -5px);
-    filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.8));
+    filter: drop-shadow(3px 3px 5px rgba(255, 255, 255, 0.8));
 }
 
 section#social-networks img {
@@ -69,14 +69,14 @@ section#social-networks img {
 
     section#social-networks {
         flex-flow: row wrap;
-        gap: 0.5rem;
-        position: absolute;
-        top: 5%;
+        gap: 0.4rem;
+        position: fixed;
+        bottom: 0;
         left: 5%;
         right: 5%;
-        background-color: #0005;
         border-radius: 0.5rem;
-        padding: 0.2rem;
+        padding: 0.5rem 0;
+        background-color: #fffa;
     }
 
     section#social-networks img {
